Added Akash's logo and updated site info :)

--- a/Application/client/public/index.html
+++ b/Application/client/public/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/record.png" />
+    <link rel="icon" href="%PUBLIC_URL%/akash_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Find Your Sound for spotify . Made with Spotify WebAPI and react"
+      content="Have you heard this, a small project to find music!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/record.png" />
-    <title>Find Your Sound</title>
+    <title>Have You Heard This?</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
